# IREC2019-flight-computer

./: .gitignore  CMakeLists.txt  FlightComputer.c  FlightComputer.h  Makefile  README.md  STM32F427VITx_FLASH.ld
Auxiliary/: Checkout.c  Checkout.h
Inc/: FlightComputer.h  SelfTest.h  StateInitialize.h  StatePadIdle.h  main.h
Src/: FlightComputer.c  SelfTest.c  StateInitialize.c  StatePadIdle.c  main.c
States/: StateAscent.c  StateAscent.h  StateCoast.c  StateCoast.h  StateInitialize.c  StateInitialize.h  StateLanded.c  StateLanded.h  StatePadIdle.c  StateTerminal.c  StateTerminal.h
System/: main.c  main.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h
